--- a/aulas.html
+++ b/aulas.html
@@ -11,10 +11,20 @@
 <body>
     <div id="encabezado">
         <img src="Imágenes/universidad_logo.png">
+        <div id="contenedor-menu-y-ruta-navegacion">
+            <div id="menu">
+                <a href="aulas.html">Aulas</a>
+                <a href="inscripcion_materias.html">Inscripción a materias</a>
+                <a href="index.html">Salir</a>
+            </div>
+            <div id="ruta-navegacion">
+                <a href="aulas.html">Aulas</a>
+            </div>
+        </div>
     </div>
     <div id="contenedor-contenido-excepto-encabezado">
         <div id="contenedor-seleccion-aula">
-            <a href="lab_programacion_1.html" id="link-materia">
+            <a href="lab_prog_1_seccion_principal.html" id="link-materia">
                 <img src="Imágenes/lab_programacion_1.png" alt="TUDS - 2023, lab. de programación 1 - C2"
                     id="img-materia">
                 <div id="contenedor-nombre-materia">
