--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <form id="form-usuario-contraseña">
                 <div class="entrada">
                     <label for="tf-usuario">Usuario:</label><br>
-                    <input type="text" id="tf-usuario" name="tf-usuario" class="text-field" />
+                    <input type="text" id="tf-usuario" name="tf-usuario" />
                 </div>
                 <div class="entrada">
                     <label for="pf-contraseña">Contraseña:</label><br>
-                    <input type="password" id="pf-contraseña" name="pf-contraseña" class="text-field " />
+                    <input type="password" id="pf-contraseña" name="pf-contraseña" />
                 </div>
                 <p id="mensaje-form-usuario-contraseña" class="mensaje"></p>
                 <button type="button" onclick="corroborarDatos()">Acceder</button>
