--- a/aulas.html
+++ b/aulas.html
@@ -28,7 +28,7 @@
                 <img src="Imágenes/lab_programacion_1.png" alt="TUDS - 2023, lab. de programación 1 - C2"
                     id="img-materia">
                 <div id="contenedor-nombre-materia">
-                    <p id="nombre-materia">Lab. de programación I - C2</p>
+                    <p id="nombre-materia">TUDS-23 - Lab. de Programación I - C2</p>
                 </div>
             </a>
         </div>
