--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
                 <div class="entrada">
                     <label for="tf-usuario">Usuario:</label><br>
                     <input type="text" id="tf-usuario" name="tf-usuario" />
+                    <span class="pista">pista: "usuario"</span>
                 </div>
                 <div class="entrada">
                     <label for="pf-contraseña">Contraseña:</label><br>
                     <input type="password" id="pf-contraseña" name="pf-contraseña" />
+                    <span class="pista">pista: "contraseña"</span>
                 </div>
                 <p id="mensaje-form-usuario-contraseña" class="mensaje"></p>
                 <button type="button" onclick="corroborarDatos()">Acceder</button>
