--- a/inscripcion_materias.html
+++ b/inscripcion_materias.html
@@ -67,7 +67,7 @@
                 <label for="fm-inscripcion-cb-ingles-tec-1"> Inglés técnico 1</label><br>
                 <input type="checkbox" id="fm-inscripcion-cb-ing-software" name="fm-inscripcion-cb-ing-software"
                     value="Ingreniería de software">
-                <label for="fm-inscripcion-cb-ing-software"> Ingreniería de software</label><br>
+                <label for="fm-inscripcion-cb-ing-software"> Ingeniería de software</label><br>
                 <p id="fm-inscripcion-cb-materias-error"></p>
 
                 <button type="button" id="fm-inscripcion-bt-envio" onclick="corroborarDatos()">Enviar</button>
